feat: intestazione + foto principali

--- a/style.css
+++ b/style.css
@@ -12,4 +12,19 @@
     margin-top: 5%;
     margin-left: 1%;
  }
- /* header */
+ /* /header */
+
+ /* main */
+
+ .booleaner{
+   color: #20a9e5; 
+ }
+ h4,h5{
+    color: #808080;
+ }
+
+
+
+
+
+ /* /main */
