--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+/* common */
+
 *{
     margin: 0;
+}
+.distance{
+    margin-top: 2%;
 }
 /* header */
 .banner{
@@ -41,10 +46,6 @@ ul{
     margin-left: 0.5%;
 }
 
-.distance{
-    margin-top: 2%;
-}
-
 .evidenziato{
     background-color: #ffff00;
 }
@@ -69,3 +70,29 @@ td{
 
 
  /* /main */
+
+ /* footer */
+h3{
+    color: #808080;
+}
+
+.foto-monitor{
+    background-repeat: no-repeat;
+    background-image: url(img/monitor.jpg);
+    height: 205px;
+    margin-top: 1%;
+}
+.scritta-su-foto{
+    color: white;
+    font-size: 28px;
+    margin-left: 1%;
+    padding-top: 10px;
+}
+
+.foto-mappa{
+    background-repeat: no-repeat;
+    background-image: url(img/graph.jpg);
+    height: 210px;
+    margin-top: 1%;
+}
+ /* /footer */
